--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -209,14 +209,14 @@
       "metadata": {
         "id": "Zj7nPcTofJ8S"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Test it\n",
-        "number = 13\n",
+        "number = 1999999777\n",
         "if is_prime(number):\n",
         "    print(f\"{number} is a Prime Number ✅\")\n",
         "else:\n",
@@ -227,15 +227,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Fqx2y0O7gYbW",
-        "outputId": "329d7e2b-95cf-4f6d-fdbd-5a607b69bf14"
+        "outputId": "4e24c010-e4f0-47e6-fef2-0231cd3cb629"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "13 is a Prime Number ✅\n"
+            "1999999777 is a Prime Number ✅\n"
           ]
         }
       ]
